Created format string pipe

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,6 +10,6 @@
   },
   "layouts": {
     "header_label": "Covid-19 Tracker",
-    "footer_label": "Copyright © 2022, Gautam Balamurali"
+    "footer_label": "Copyright © {{year}}, Gautam Balamurali"
   }
 }
